# eci-initiatives-radar-pipeline

./: .gitignore  README.md  README.requirements.md  pyproject.toml  requirements.txt  scraper_poc.py
.github/workflows/: poc_pipeline.yml
data/: eci_initiatives.csv
data/2026-02-27_11-19-05/: ECI_2024_000007.html  eci_poc_data.csv
data/2026-02-27_11-42-45/: eci_poc_data.csv
doc/: README.requirements.md  README.todo.draft.md
local_artifacts/: eci_categories.csv  eci_responses.csv
page_to_export/: index.html
scripts/: test.py
